After lesson: Talked about portfolio

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nb">
   <head>
-    <title>Hjem</title>
+    <title>Hjemmeside</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
@@ -14,7 +14,7 @@
         <ul class="navigationList">
           <a href="#home"><li>Hjem</li></a>
           <a href="#about"><li>Om meg</li></a>
-          <a href="#prject"> <li>Prosjekter</li></a>
+          <a href="#project"><li>Prosjekter</li></a>
         </ul>
       </nav>
     </header>
